--- a/webviewdemo02_javascript/src/main/AndroidManifest.xml
+++ b/webviewdemo02_javascript/src/main/AndroidManifest.xml
@@ -2,6 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.webviewdemo02_javascript">
 
+    <uses-permission android:name="android.permission.CALL_PHONE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.WRITE_CONTACTS" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -16,7 +21,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".OneActivity"></activity>
+        <activity android:name=".OneActivity" />
+        <activity android:name=".TwoActivity" />
+        <activity android:name=".ThreeActivity"></activity>
     </application>
 
 </manifest>
