WebView文件下载way01-调用其他浏览器下载文件

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':webviewdemo01_basic', ':webviewdemo02_javascript'
+include ':app', ':webviewdemo01_basic', ':webviewdemo02_javascript', ':webviewdemo03_download'
