--- a/webviewdemo03_download/src/main/AndroidManifest.xml
+++ b/webviewdemo03_download/src/main/AndroidManifest.xml
@@ -3,6 +3,12 @@
     package="com.example.webviewdemo03_download">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <!-- 在SDCard中创建与删除文件权限 -->
+    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
+    <!-- 往SDCard写入数据权限 -->
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <!-- 如果将下载的文件保存到外部存储器，还需要配置外部存储器的读写权限 -->
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
     <application
         android:allowBackup="true"
@@ -18,7 +24,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".FirstActivity"></activity>
+        <activity android:name=".FirstActivity" />
+        <activity android:name=".SecondActivity"/>
     </application>
 
 </manifest>
